--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "js"
   ],
   "contributors": [
+    "greenkeeperio-bot <support@greenkeeper.io>",
     "gruntjs-updater <updater@gruntjs.com>"
   ]
 }
