--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
+sudo: false
 language: node_js
 node_js:
-  - 'iojs'
-  - '0.12'
-  - '0.10'
+  - "5"
+  - "4"
+  - "0.12"
 before_install:
-  - npm install -g grunt-cli
+  - if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
